<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChasingLifes</string>

    <!-- Schermata di Login -->
    <string name="username">Nome Utente</string>
    <string name="password">Password</string>
    <string name="login">Accedi</string>
    <string name="register">Registrati</string>
    <string name="user_type_prompt">Seleziona tipo utente</string>
    <string name="register_as_operator">Registrati come operatore</string>
    <string-array name="user_types_array">
        <item>Utente</item>
        <item>Operatore</item>
    </string-array>
    <string name="login_failed">Credenziali non valide.</string>
    <string name="registration_successful">Registrazione avvenuta con successo!</string>
    <string name="user_already_exists">L\'utente esiste già.</string>

    <!-- Titoli -->
    <string name="title_user">UTENTE: %1$s</string>
    <string name="title_operator">OPERATORE: %1$s</string>

    <!-- Schermata Principale (Utente) -->
    <string name="join_a_session">Unisciti a una Sessione</string>
    <string name="enter_a_code">Inserisci un codice</string>
    <string name="identified">Identificati</string>
    <string name="unidentified">Non Identificati</string>
    <string name="missing">Dispersi</string>
    <string name="deceased">Deceduti</string>
    <string name="add_missing_person">Segnala Persona Scomparsa</string>
    <string name="profile">Profilo</string>
    <string name="delete_account">Cancella Account</string>
    <string name="search_hint">Cerca per nome, cognome…</string>
    <string name="confirm_delete_account_title">Conferma Cancellazione</string>
    <string name="confirm_delete_account_message">Sei sicuro di voler cancellare il tuo account? Questa azione è irreversibile.</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="account_deleted_successfully">Account cancellato con successo.</string>
    <string name="add_contact">Aggiungi Contatto</string>
    <string name="add_contact_role_hint">Ruolo (es: Moglie)</string>
    <string name="add_contact_name_hint">Nome Cognome (es: Gina Rossi)</string>
    <string name="add_contact_contact_hint">Contatto (es: 3456789001)</string>
    <string name="save">Salva</string>
    <string name="cancel">Annulla</string>
    <string name="contact_added">Contatto aggiunto.</string>
    <string name="no_contacts_available">Nessun contatto disponibile.</string>
    <string name="contacts_for">Contatti per %1$s</string>
    <string name="patient_fallback">paziente</string>
    <string name="joined_session">Unito alla sessione %1$s</string>
    <string name="invalid_session_code">Codice sessione non valido.</string>
    <string name="session_room_title">Stanza: %1$s</string>
    <string name="missing_person_added">Persona scomparsa aggiunta.</string>
    <string name="identify_patient_title">Identifica Paziente</string>
    <string name="name_hint">Nome</string>
    <string name="surname_hint">Cognome</string>
    <string name="identify_button">Identifica</string>
    <string name="signs_label">Segni</string>
    <string name="inserted_by_label">Inserito da</string>
    <string name="session_code_hint">Codice</string>
    <string name="join">Unisciti</string>

    <!-- Schermata Operatore -->
    <string name="generate_session">Genera Sessione</string>
    <string name="add_patient">Aggiungi Paziente</string>
    <string name="edit_patient">Modifica Paziente</string>
    <string name="confirm_delete_patient_title">Conferma Cancellazione</string>
    <string name="confirm_delete_patient_message">Sei sicuro?</string>
    <string name="session_created">Sessione %1$s creata!</string>
    <string name="patient_updated">Paziente aggiornato!</string>
    <string name="patient_added">Paziente aggiunto!</string>

    <!-- Schermata Splash -->
    <string name="splash_title">ChasingLifes Beta</string>
    <string name="continue_button">Continua</string>

    <!-- Stringhe di default del template -->
    <string name="first_fragment_label">Primo Frammento</string>
    <string name="second_fragment_label">Secondo Frammento</string>
    <string name="next">Successivo</string>
    <string name="previous">Precedente</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus mi nec purus. Fusce varius vel magna ac vestibulum. Nam perferendis lorem, id aliquam sapien. Integer nec dictum elit. Quisque libero metus, eleifend in dictum at, commodo nec tortor. Etiam mollis ultricies consequat. Ut accumsan triviale, id luctussed.</string>

</resources>