<!-- English: Menu for the main activity.
     Italiano: Menu per l'attività principale. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_add_missing_person"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_missing_person"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/profile"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_delete_account"
                android:title="@string/delete_account" />
        </menu>
    </item>

</menu>
