<!-- English: Layout for the dialog to add or edit a patient.
     Italiano: Layout per il dialogo per aggiungere o modificare un paziente. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="24dp">

    <LinearLayout
        android:id="@+id/identified_patient_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/patient_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/patient_surname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/surname_hint" />
    </LinearLayout>

    <EditText
        android:id="@+id/distinguishing_marks_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/signs_label" />

    <EditText
        android:id="@+id/hospital_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Struttura Ospedaliera" />

    <CheckBox
        android:id="@+id/unidentified_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/unidentified" />

    <LinearLayout
        android:id="@+id/conditions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/conditions_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Condizioni" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/deceased_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deceased" />

    <Button
        android:id="@+id/upload_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Carica Foto (non attivo)"
        android:enabled="false" />

</LinearLayout>